--- a/settings.json
+++ b/settings.json
@@ -37,9 +37,9 @@
 "include_questionable_tag": true,
 "include_safe_tag": true,
 "reorder_tags": true,
-"tag_order_format": "character, species, artist, rating, general, meta",
-"prepend_tags": "my_prepend_tag",
-"append_tags": "my_append_tag_A, my_append_tag_B",
+"tag_order_format": "artist, character, species, general, meta, rating",
+"prepend_tags": "",
+"append_tags": "",
 "replace_underscores": false,
 "remove_parentheses": false,
 "remove_tags_list": "",
