--- a/settings.json
+++ b/settings.json
@@ -4,7 +4,7 @@
 "blacklist": "",
 "include_png": true,
 "include_jpg": true,
-"include_gif": false,
+"include_gif": true,
 "include_webm": false,
 "include_swf": false,
 "include_explicit": true,
@@ -45,7 +45,7 @@
 "remove_tags_list": "",
 "replace_tags_list": "",
 "tag_count_list_folder": "tag_count",
-"skip_resize": false,
+"skip_resize": true,
 "min_short_side": 768,
 "img_ext": "png",
 "delete_original": false,
