--- a/settings.json
+++ b/settings.json
@@ -5,15 +5,15 @@
 "include_png": true,
 "include_jpg": true,
 "include_gif": true,
-"include_webm": false,
-"include_swf": false,
+"include_webm": true,
+"include_swf": true,
 "include_explicit": true,
 "include_questionable": true,
 "include_safe": true,
-"min_score": 500,
+"min_score": 0,
 "min_fav_count": 0,
-"min_date": "2013",
-"min_area": 262144,
+"min_date": "2000-01-01",
+"min_area": 1,
 "collect_from_listed_posts_file": "",
 "collect_from_listed_posts_type": "id",
 "apply_filter_to_listed_posts": false,
@@ -46,9 +46,15 @@
 "replace_tags_list": "",
 "tag_count_list_folder": "tag_count",
 "skip_resize": true,
-"min_short_side": 768,
+"min_short_side": 61437,
 "img_ext": "png",
 "delete_original": false,
 "resized_img_folder": "resized_img",
-"method_tag_files": "copy"
+"method_tag_files": "copy",
+"min_year": 2000,
+"min_month": 1,
+"min_day": 1,
+"proxy_url": "61437",
+"use_csv_custom": false,
+"csv_custom_path": ""
 }
