--- a/environment.yml
+++ b/environment.yml
@@ -25,7 +25,7 @@ dependencies:
     - requests
     - tqdm
     - pyarrow
-    - gradio==3.50.2
+    - gradio
     - beautifulsoup4
     - pandas
     - onnxruntime
