Update environment.yml with onnx

--- a/environment.yml
+++ b/environment.yml
@@ -29,6 +29,7 @@ dependencies:
     - gradio
     - beautifulsoup4
     - pandas
+    - onnx
     - onnxruntime
     - onnxruntime-gpu
     - piexif
