Add config entries table and fix auto config paths

--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
-"batch_folder": "batch0",
+"batch_folder": "data/batch0",
 "required_tags": "",
 "blacklist": "",
 "include_png": true,
@@ -20,7 +20,7 @@
 "skip_posts_file": "",
 "skip_posts_type": "id",
 "do_sort": true,
-"top_n": 100,
+"top_n": 1000000,
 "save_searched_list_type": "id",
 "save_searched_list_path": "list_of_searched_ids.txt",
 "downloaded_posts_folder": "downloaded_posts",
@@ -46,7 +46,7 @@
 "replace_tags_list": "",
 "tag_count_list_folder": "tag_count",
 "skip_resize": true,
-"min_short_side": 61437,
+"min_short_side": 100000,
 "img_ext": "png",
 "delete_original": false,
 "resized_img_folder": "resized_img",
