--- a/environment.yml
+++ b/environment.yml
@@ -1,25 +1,22 @@
 name: data-curation
 
 channels:
-  - pytorch
-  - nvidia
   - conda-forge
-  - nodefaults
 
 dependencies:
-  - python==3.10
+  - python==3.11.9
+  - pytorch-gpu=2.7              # pulls torch + torchvision + CUDA libs
+  - timm
+  - safetensors
+  - msgspec
+  - pillow
+  - matplotlib
   - ipython
   - datrie
   - pip
-  - pytorch
-  - torchvision
-  - torchaudio
-  - pytorch-cuda=12.1
   - mkl-service
-  - Pillow
   - libjpeg-turbo
   - libpng
-  - numpy<2
   - pip:
     - opencv-python
     - polars==0.16.18
@@ -27,10 +24,10 @@ dependencies:
     - tqdm
     - pyarrow
     - gradio
+    - huggingface_hub
     - beautifulsoup4
     - pandas
     - onnxruntime
     - onnxruntime-gpu
     - piexif
-    - timm
     - chardet
